Fix alignment on small standalone images

--- a/_sass/mixins/_markdown-content.scss
+++ b/_sass/mixins/_markdown-content.scss
@@ -219,6 +219,7 @@
     // Standalone images
     figure {
         margin: $spacing-unit-medium 0;
+        text-align: center;
 
         img {
             max-width: 100%;
